# alchemy

./: .gitignore  .gitmodules  00_includes.au_  01_header.au_  02_script.au_  03_close.au_  A1_Alchemy_DaeCursed  A1_Alchemy_DaeCursed.esp.yaml  A1_Alchemy_Dialogs.esp.yaml  A1_Alchemy_Potions  A1_Alchemy_Potions.esp.yaml  A1_Alchemy_Potions_MM.esp.yaml  A1_Alchemy_Potions_PR.esp.yaml  A1_Alchemy_Potions_PU.esp.yaml  A1_Alchemy_V4_Apparatus  A1_Alchemy_V4_Apparatus_MFR  A1_Alchemy_V4_Containers  A1_Alchemy_V5_Apparatus  A1_Alchemy_V5_Apparatus_EVA  A1_Alchemy_V5_Apparatus_MFR  A1_Alchemy_V6_Apparatus  A1_Alchemy_V6_Apparatus.esp.yaml  A1_Alchemy_V6_Apparatus_EVA  A1_Alchemy_V6_Apparatus_EVA.esp.yaml  A1_Alchemy_V6_Apparatus_EVA_Ext.esp.yaml  A1_Alchemy_V6_Apparatus_Ext.esp.yaml  A1_Alchemy_V6_Apparatus_MFR.esp.yaml  A1_Alchemy_V6_Containers  A1_Alchemy_V6_Containers.esp.yaml  A1_Alchemy_V7_Apparatus.esp.yaml  A1_Alchemy_V7_Apparatus_EVA.esp.yaml  A1_Alchemy_V7_Apparatus_EVA.top  A1_Alchemy_V7_Apparatus_MFR.esp.yaml  A1_Alchemy_V7_Apparatus_MFR.top  COMPILATION  README  Readme.txt  TODO  VERSIONS  Versions.txt  (+18 more)
A1_Alchemy_V4_Apparatus.d/: A1_Alchemy_V4_Apparatus.nosc  build  scripts.list
PotionsBalance/: Cargo.toml
d/: A1_Alchemy_V4_Apparatus.nosc  appa  build  effects  h  h_eva  h_mfr  inf  ingr  ingredients_data  ingredients_data_mfr  make_scripts  make_scripts.py  make_scripts_mfr  (+10 more)
potions_balance/: Cargo.toml  build.rs
potions_balance/src/: gui.rs  main.rs  resources.rc
potions_balance/winapi_gui/: Cargo.toml
potions_balance/winapi_gui/src/: lib.rs
(+506 files in other folders)
