[package]
name = "potions_balance"
version = "0.1.0"
authors = ["Warlock <internalmike@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
winapi_gui = { path = "winapi_gui" }
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "errhandlingapi", "commdlg"] }
rust-ini = "0.15.2"
windres = "0.2.1"
filetime = "0.2.8"
esl = "0.3.1"
encoding = "0.2.33"
either = "1.5.3"
winreg = "0.7.0"

[build-dependencies]
windres = "0.2.1"
find-winsdk = "0.2.0"
